Correções gerais de Responsividade - Mobile e Tablet.
Substituídos os Vetores na Section - Projects;
Resolvidas questões de Responsividade na Section - Projects para o Acesso Mobile;
Mais ajustes de Responsividade para o acesso Mobile e Tablet nas Sections Services e Projects;
Mais ajustes de Responsividade para o acesso Mobile e Tablet na Section Footer;
Ajustes de Responsividade nos acessos Mobile e Tablet nas Imagens da Section - Projects.

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
                     <div class="service_top">
                         <h1 class="section_title"> Nossos <span class="section_title_span">Serviços</span> </h1>
                             <p>
-                                &nbsp;&nbsp;&nbsp; A prestação de serviços na área de segurança privada, além de tratar da segurança física de 
+                                A prestação de serviços na área de segurança privada, além de tratar da segurança física de 
                                 bens, patrimônios e pessoas, está inevitavelmente relacionada com a portaria/recepção das empresas.
                             </p>
                             <p>
-                                &nbsp;&nbsp;&nbsp;A recepção é o cartão de visitas de uma empresa. É o primeiro ponto de contato de quem está visitando 
+                                A recepção é o cartão de visitas de uma empresa. É o primeiro ponto de contato de quem está visitando 
                                 e, como a primeira impressão é a que fica, quando alguém é mal atendido por uma pessoa a imagem da 
                                 empresa como um todo fica desgastada, por isso é importante ter pessoas especializadas para que a empresa 
                                 seja bem vista desde o seu portão de entrada.
@@ -127,7 +127,7 @@
                                     </p>
                             </div>
                             <div class="project_image">
-                                <img src="./vectors/medal.svg"/>
+                                <img src="./vectors/decide.svg"/>
                             </div>
                         </div>
                         <div class="project_item">
@@ -138,7 +138,7 @@
                                     </p>
                             </div>
                             <div class="project_image">
-                                <img src="./vectors/achievement.svg"/>
+                                <img src="./vectors/challenge.svg"/>
                             </div>
                         </div>
                         <div class="project_item">
@@ -150,7 +150,7 @@
                                     </p>
                             </div>
                             <div class="project_image">
-                                <img src="./vectors/focus.svg"/>
+                                <img src="./vectors/presentation.svg"/>
                             </div>
                         </div>
                         <div class="project_item">
@@ -163,7 +163,7 @@
                                     </p>
                             </div>
                             <div class="project_image">
-                                <img src="./vectors/quality-assurance.svg"/>
+                                <img src="./vectors/focusing.svg"/>
                             </div>
                         </div>
                     </div>
@@ -257,8 +257,8 @@
                                 </div>
                                 <div class="contact_info">
                                     <h1> Endereço </h1>
-                                        <h2>JPGOBBI Seg. Privada</h2>
-                                            <h3> Rua Maringá, 180 - Centro - São Marcos - RS - 95190-000 </h2>
+                                        <h2> São Marcos - RS </h2>
+                                            <h3> Rua Maringá, 180 </h2>
                                 </div>
                             </div>
                         </a>
@@ -280,7 +280,7 @@
                                 </div>
                             </div>
                                 <p>
-                                  Copyright &copy; 2020 JPGOBBI Segurança Privada. Todos os direitos reservados.
+                                  Copyright &copy;2020 JPGOBBI Segurança Privada. Todos os direitos reservados.
                                 </p>
                 </div>
             </section>
