Ajustes gerais de Responsividade.
Ajustes gerais de Responsividade nas Sections;
Refinamentos finais de Responsividade nos acessos Mobile e Tablet na Section - Contact.

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     </div>
                     <div class="all_projects">
                         <div class="project_item">
-                            <div class="project_info">
+                            <div class="project_info right">
                                 <h1> Vantagem Competitiva </h1>
                                     <p>
                                         A nossa <span>vantagem competitiva</span> é a gestão do negócio, dos recursos e das pessoas feita de forma aprimorada, aplicando diversas práticas bem aceitas pelo 
@@ -142,7 +142,7 @@
                             </div>
                         </div>
                         <div class="project_item">
-                            <div class="project_info">
+                            <div class="project_info right">
                                 <h1> Foco </h1>
                                     <p>
                                         Nosso <span>foco</span> está voltado para solucionar os problemas de segurança apresentados pelas empresas contratantes, sendo <span>transparente</span> ao ponto de prestar o 
