Minificação geral do Projeto.
Realização da Minificação Geral do Projeto, feita nos arquivos HTML, CSS e JS visando cada vez mais obter esses arquivos leves.

--- a/index.html
+++ b/index.html
@@ -1,30 +1,20 @@
 <!DOCTYPE html>
-
     <html lang="PT-BR">
-
         <head>
-
             <meta charset="UTF-8"/>
             <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
                 <title> JPGOBBI Segurança Privada </title>
                     <link rel="stylesheet" type="text/css" href="./styles.css"/>
                     <link rel="icon" type="image/png" href="./images/jpgobbi_logo_withoutbg_cropped.png"/>
-
         </head>
-
         <body>
-
             <!-- Main Header Menu -->
             <section id="header">
                 <div class="header container">
                     <div class="nav_bar">
-                        <div class="brand">
-                            <a href="#hero"> <h1 class="brand_title"><span class="brand_span">JPGOBBI</span> Segurança Privada</h1> </a>
-                        </div>
+                        <div class="brand"> <a href="#hero"> <h1 class="brand_title"><span class="brand_span">JPGOBBI</span> Segurança Privada</h1> </a> </div>
                         <div class="nav_list">
-                            <div class="hamburger">
-                                <div class="bar"> </div>
-                            </div>
+                            <div class="hamburger"> <div class="bar"> </div> </div>
                                 <ul>
                                     <li> <a href="#hero" data-after="Home"> Home </a> </li>
                                     <li> <a href="#services" data-after="Serviços"> Serviços </a> </li>
@@ -37,7 +27,6 @@
                 </div>
             </section>
             <!-- End Main Header Menu -->
-
             <!-- Hero Section -->
             <section id="hero">
                 <div class="hero container">
@@ -50,121 +39,93 @@
                 </div>
             </section>
             <!-- End Hero Section -->
-
             <!-- Service Section -->
             <section id="services">
                 <div class="services container">
                     <div class="service_top">
                         <h1 class="section_title"> Nossos <span class="section_title_span">Serviços</span> </h1>
-                            <p>
-                                A prestação de serviços na área de segurança privada, além de tratar da segurança física de 
-                                bens, patrimônios e pessoas, está inevitavelmente relacionada com a portaria/recepção das empresas.
-                            </p>
-                            <p>
-                                A recepção é o cartão de visitas de uma empresa. É o primeiro ponto de contato de quem está visitando 
-                                e, como a primeira impressão é a que fica, quando alguém é mal atendido por uma pessoa a imagem da 
-                                empresa como um todo fica desgastada, por isso é importante ter pessoas especializadas para que a empresa 
-                                seja bem vista desde o seu portão de entrada.
-                            </p>
+                            <p> A prestação de serviços na área de segurança privada, além de tratar da segurança física de bens, 
+                            patrimônios e pessoas, está inevitavelmente relacionada com a portaria/recepção das empresas. </p>
+                            <p> A recepção é o cartão de visitas de uma empresa. É o primeiro ponto de contato de quem está visitando 
+                            e, como a primeira impressão é a que fica, quando alguém é mal atendido por uma pessoa a imagem da empresa 
+                            como um todo fica desgastada, por isso é importante ter pessoas especializadas para que a empresa seja bem 
+                            vista desde o seu portão de entrada.</p>
                     </div>
                     <div class="service_bottom">
                         <div class="service_item">
                             <div class="item_icon icon_first"> </div>
                                 <h2> Profissionalismo </h2>
-                                    <p class="service_item_text">
-                                        Profissionais especializados para fornecer esse tipo de atendimento. Assim o contratante não precisa se preocupar com este tipo de 
-                                        serviço secundário e pode se focar na atividade fim (core-business) de sua empresa, que é o que gera lucro para a mesma.
-                                    </p>
+                                    <p class="service_item_text"> Profissionais especializados para fornecer esse tipo de atendimento. Assim 
+                                    o contratante não precisa se preocupar com este tipo de serviço secundário e pode se focar na atividade 
+                                    fim (core-business) de sua empresa, que é o que gera lucro para a mesma. </p>
                         </div>
                         <div class="service_item">
                             <div class="item_icon icon_second"> </div>
                                 <h2> Vigilância Armada </h2>
-                                    <p class="service_item_text">
-                                        Disponibilização de vigilantes armados formados e com as especializações necessárias para o cumprimento das atribuições elencadas para cada um.
-                                            <span class="service_text_span">Durante o horário comercial ou ainda se estender para uma cobertura de 24 horas 7 dias por semana.</span>
-                                    </p>
+                                    <p class="service_item_text"> Disponibilização de vigilantes armados formados e com as especializações necessárias 
+                                    para o cumprimento das atribuições elencadas para cada um. <span class="service_text_span">Durante o horário 
+                                    comercial ou ainda se estender para uma cobertura de 24 horas 7 dias por semana.</span> </p>
                         </div>
                         <div class="service_item">
                             <div class="item_icon icon_third"> </div>
                                 <h2> Portaria Desarmada </h2>
-                                    <p class="service_item_text">
-                                        Disponibilização de auxiliares de segurança com especializações para desempenharem papéis menos críticos, que não necessitem de vigilantes armados.
-                                            <span class="service_text_span">Durante o horário comercial ou se estende para uma cobertura de 24 horas 7 dias por semana.</span>
-                                    </p>
+                                    <p class="service_item_text"> Disponibilização de auxiliares de segurança com especializações para desempenharem papéis 
+                                    menos críticos, que não necessitem de vigilantes armados. <span class="service_text_span">Durante o horário comercial 
+                                    ou se estende para uma cobertura de 24 horas 7 dias por semana.</span> </p>
                         </div>
                         <div class="service_item">
                             <div class="item_icon icon_four"> </div>
                                 <h2> Recepcionista </h2>
-                                    <p class="service_item_text">
-                                        Disponibilização de recepcionistas com especializações para desempenharem papéis relacionados a recepção de pessoas e atendimento telefônico durante o 
-                                        horário de funcioanamento da empresa.
-                                            <span class="service_text_span">Geralmente durante o horário comercial.</span>
-                                    </p>
+                                    <p class="service_item_text"> Disponibilização de recepcionistas com especializações para desempenharem papéis relacionados a 
+                                    recepção de pessoas e atendimento telefônico durante o horário de funcioanamento da empresa. <span class="service_text_span">
+                                    Geralmente durante o horário comercial.</span> </p>
                         </div>
                     </div>
                 </div>
             </section>
             <!-- End Service Section -->
-
             <!-- Projects Section -->
             <section id="projects">
                 <div class="projects container">
                     <div class="projects_header">
                         <h1 class="section_title"> Nossa <span class="section_title_span">História</span> </h1>
-                            <p>
-                                Tudo começou através de uma pesquisa de mercado na qual foi identificada uma oportunidade de negócio a ser empreendido na região. Sabendo que o mercado atualmente 
-                                não absorve novas empresas que produzem/prestam serviços do mesmo modo que as empresas já existentes, foi necessario criar vantagens competitivas para alavancar 
-                                essa empresa emergente.
-                            </p>
+                            <p> Tudo começou através de uma pesquisa de mercado na qual foi identificada uma oportunidade de negócio a ser empreendido na região. Sabendo
+                                que o mercado atualmente não absorve novas empresas que produzem/prestam serviços do mesmo modo que as empresas já existentes, foi necessario 
+                                criar vantagens competitivas para alavancar essa empresa emergente. </p>
                     </div>
                     <div class="all_projects">
                         <div class="project_item">
                             <div class="project_info right">
                                 <h1> Vantagem Competitiva </h1>
-                                    <p>
-                                        A nossa <span>vantagem competitiva</span> é a gestão do negócio, dos recursos e das pessoas feita de forma aprimorada, aplicando diversas práticas bem aceitas pelo 
-                                        mercado, tudo isso sendo realizado com o suporte de <span>pessoas capacitadas</span> para tal.
-                                    </p>
+                                    <p> A nossa <span>vantagem competitiva</span> é a gestão do negócio, dos recursos e das pessoas feita de forma aprimorada, aplicando diversas
+                                    práticas bem aceitas pelo  mercado, tudo isso sendo realizado com o suporte de <span>pessoas capacitadas</span> para tal. </p>
                             </div>
-                            <div class="project_image">
-                                <img src="./vectors/decide.svg"/>
-                            </div>
+                            <div class="project_image"> <img src="./vectors/decide.svg"/> </div>
                         </div>
                         <div class="project_item">
                             <div class="project_info">
                                 <h1> Objetivo</h1>
-                                    <p>
-                                        Nosso principal <span>objetivo</span> é prestar um <span>serviço com excelência</span>, e é por isso que queremos ser lembrados.
-                                    </p>
+                                    <p> Nosso principal <span>objetivo</span> é prestar um <span>serviço com excelência</span>, e é por isso que queremos ser lembrados. </p>
                             </div>
-                            <div class="project_image">
-                                <img src="./vectors/challenge.svg"/>
-                            </div>
+                            <div class="project_image"> <img src="./vectors/challenge.svg"/> </div>
                         </div>
                         <div class="project_item">
                             <div class="project_info right">
                                 <h1> Foco </h1>
-                                    <p>
-                                        Nosso <span>foco</span> está voltado para solucionar os problemas de segurança apresentados pelas empresas contratantes, sendo <span>transparente</span> ao ponto de prestar o 
-                                        serviço com o <span>máximo de excelência</span> sem prejudicar o bom funcionamento das tarefas cotidianas da empresa contratante.
-                                    </p>
+                                    <p> Nosso <span>foco</span> está voltado para solucionar os problemas de segurança apresentados pelas empresas contratantes, sendo 
+                                    <span>transparente</span> ao ponto de prestar o  serviço com o <span>máximo de excelência</span> sem prejudicar o bom funcionamento das 
+                                    tarefas cotidianas da empresa contratante. </p>
                             </div>
-                            <div class="project_image">
-                                <img src="./vectors/presentation.svg"/>
-                            </div>
+                            <div class="project_image"> <img src="./vectors/presentation.svg"/> </div>
                         </div>
                         <div class="project_item">
                             <div class="project_info">
                                 <h1> Qualidade </h1>
-                                    <p>
-                                        Entregamos mais <span>qualidade</span> pois investimos em treinamento e capacitação dos colaboradores, bem como praticamos <span>políticas diferenciadas</span> para retenção de
-                                        talentos. Contamos com profissionais altamente capacitados que passam periodicamente por cursos de reciclagem para atender as normas existentes nesta área e a mantê-los 
-                                        <span>constantemente atualizados</span>.
-                                    </p>
+                                    <p> Entregamos mais <span>qualidade</span> pois investimos em treinamento e capacitação dos colaboradores, bem como praticamos <span>políticas 
+                                    diferenciadas</span> para retenção de talentos. Contamos com profissionais altamente capacitados que passam periodicamente por cursos de reciclagem 
+                                    para atender as normas existentes nesta área e a mantê-los <span>constantemente atualizados</span>. </p>
                             </div>
-                            <div class="project_image">
-                                <img src="./vectors/focusing.svg"/>
-                            </div>
+                            <div class="project_image"> <img src="./vectors/focusing.svg"/> </div>
                         </div>
                     </div>
                 </div>
@@ -218,19 +179,14 @@
                 <div class="contact container">
                     <div>
                         <h1 class="section_title"> Fale <span class="section_title_span">Conosco</span> </h1>
-                            <p>
-                                Agora com o nosso novo cantinho virtual, ficou ainda mais fácil para você, Colaborador ou Parceiro, entrar 
-                                em contato conosco. Basta clicar em um dos cards abaixo que os aplicativos no seu dispositivo abrirão 
-                                automaticamente e você poderá iniciar seu contato conosco de forma dinâmica e rápida.
-
-                            </p>
+                            <p> Agora com o nosso novo cantinho virtual, ficou ainda mais fácil para você, Colaborador ou Parceiro, entrar  em contato conosco. Basta 
+                            clicar em um dos cards abaixo que os aplicativos no seu dispositivo abrirão  automaticamente e você poderá iniciar seu contato conosco de 
+                            forma dinâmica e rápida. </p>
                     </div>
                     <div class="contact_items">
                         <a href="http://api.whatsapp.com/send?1=pt_BR&phone=5554999574777" target="_blank">
                             <div class="contact_item">
-                                <div class="icon">
-                                    <img src="./icons/whatsapp.svg" width="100px"/>
-                                </div>
+                                <div class="icon"> <img src="./icons/whatsapp.svg" width="100px"/> </div>
                                 <div class="contact_info">
                                     <h1> WhatsApp </h1>
                                         <h2> Paulo Augusto Gobbi </h2>
@@ -240,9 +196,7 @@
                         </a>
                         <a href="mailto:paulo@jpgobbi.com.br" target="_blank">
                             <div class="contact_item">
-                                <div class="icon">
-                                    <img src="./icons/email.svg" width="100px"/>
-                                </div>
+                                <div class="icon"> <img src="./icons/email.svg" width="100px"/> </div>
                                 <div class="contact_info">
                                     <h1> E-Mail </h1>
                                         <h2> Paulo Augusto Gobbi </h2>
@@ -252,9 +206,7 @@
                         </a>
                         <a href="https://www.google.com/maps/place/R.+Maring%C3%A1,+180,+S%C3%A3o+Marcos+-+RS,+95190-000,+Brazil/@-28.9712445,-51.0805789,17z/data=!4m5!3m4!1s0x951e93cb3fbd76ed:0x3ff33d966c0afc07!8m2!3d-28.9703998!4d-51.0786906?hl=en" target="_blank">
                             <div class="contact_item">
-                                <div class="icon">
-                                    <img src="./icons/mapmarker.svg" width="100px"/>
-                                </div>
+                                <div class="icon"> <img src="./icons/mapmarker.svg" width="100px"/> </div>
                                 <div class="contact_info">
                                     <h1> Endereço </h1>
                                         <h2> São Marcos - RS </h2>
@@ -266,7 +218,6 @@
                 </div>
             </section>
             <!-- End Contact Section -->
-
             <!-- Footer -->
             <section id="footer">
                 <div class="footer container">
@@ -279,15 +230,10 @@
                                     <a href="https://www.facebook.com/jpgobbi" target="_blank"> <img src="./icons/facebook.svg" width="100px"/> </a>
                                 </div>
                             </div>
-                                <p>
-                                  Copyright &copy;2020 JPGOBBI Segurança Privada. Todos os direitos reservados.
-                                </p>
+                                <p> &copy;2020 JPGOBBI Segurança Privada. Todos os direitos reservados. </p>
                 </div>
             </section>
             <!-- End Footer -->
-
             <script type="text/javascript" src="./scripts.js"> </script>
-            
         </body>
-
     </html>
