Redesign completo da Section - Projects.
Redesign da Section - Projects para o acesso Mobile;
Os refinamentos realizados e implementados foram inspirados nos feitos na Section - Services;
Redefinidas as imagens de apresentação dessa Section - Projects;
Ajustes gerais na Section - Projects para acesso no Tablet da Media Query - Tablet.

--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
                                     <p> A nossa <span>vantagem competitiva</span> é a gestão do negócio, dos recursos e das pessoas feita de forma aprimorada, aplicando diversas
                                     práticas bem aceitas pelo  mercado, tudo isso sendo realizado com o suporte de <span>pessoas capacitadas</span> para tal. </p>
                             </div>
-                            <div class="project_image"> <img src="./vectors/decide.svg"/> </div>
+                            <div class="project_image"> <img src="./vectors/think.svg"/> </div>
                         </div>
                         <div class="project_item">
                             <div class="project_info">
                                 <h1> Objetivo</h1>
                                     <p> Nosso principal <span>objetivo</span> é prestar um <span>serviço com excelência</span>, e é por isso que queremos ser lembrados. </p>
                             </div>
-                            <div class="project_image"> <img src="./vectors/challenge.svg"/> </div>
+                            <div class="project_image"> <img src="./vectors/graph.svg"/> </div>
                         </div>
                         <div class="project_item">
                             <div class="project_info right">
@@ -116,7 +116,7 @@
                                     <span>transparente</span> ao ponto de prestar o  serviço com o <span>máximo de excelência</span> sem prejudicar o bom funcionamento das 
                                     tarefas cotidianas da empresa contratante. </p>
                             </div>
-                            <div class="project_image"> <img src="./vectors/presentation.svg"/> </div>
+                            <div class="project_image"> <img src="./vectors/target.svg"/> </div>
                         </div>
                         <div class="project_item">
                             <div class="project_info">
@@ -125,7 +125,7 @@
                                     diferenciadas</span> para retenção de talentos. Contamos com profissionais altamente capacitados que passam periodicamente por cursos de reciclagem 
                                     para atender as normas existentes nesta área e a mantê-los <span>constantemente atualizados</span>. </p>
                             </div>
-                            <div class="project_image"> <img src="./vectors/focusing.svg"/> </div>
+                            <div class="project_image"> <img src="./vectors/analysis.svg"/> </div>
                         </div>
                     </div>
                 </div>
