Finalização de Design na Section - Projects.
Ajustes finais de Responsividade na Section - Projects para o acesso via Tablet - na Media Query Tablet.

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                 criar vantagens competitivas para alavancar essa empresa emergente. </p>
                     </div>
                     <div class="all_projects">
-                        <div class="project_item">
+                        <div class="project_item upleft_border upright_border">
                             <div class="project_info right">
                                 <h1> Vantagem Competitiva </h1>
                                     <p> A nossa <span>vantagem competitiva</span> é a gestão do negócio, dos recursos e das pessoas feita de forma aprimorada, aplicando diversas
@@ -118,7 +118,7 @@
                             </div>
                             <div class="project_image"> <img src="./vectors/target.svg"/> </div>
                         </div>
-                        <div class="project_item">
+                        <div class="project_item downleft_border downright_border">
                             <div class="project_info">
                                 <h1> Qualidade </h1>
                                     <p> Entregamos mais <span>qualidade</span> pois investimos em treinamento e capacitação dos colaboradores, bem como praticamos <span>políticas 
