Ajustes simples no HTML e CSS.
Realizados alguns ajustes simples no HTML e CSS do projeto.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                         <div class="nav_list">
                             <div class="hamburger"> <div class="bar"> </div> </div>
                                 <ul>
-                                    <li> <a href="#hero" data-after="Home"> Home </a> </li>
+                                    <li> <a href="#hero" data-after="Home" class="active"> Home </a> </li>
                                     <li> <a href="#services" data-after="Serviços"> Serviços </a> </li>
                                     <li> <a href="#projects" data-after="Sobre"> Sobre </a> </li>
                                     <li> <a href="#about" data-after="Direção"> Direção </a> </li>
@@ -49,7 +49,7 @@
                             <p> A recepção é o cartão de visitas de uma empresa. É o primeiro ponto de contato de quem está visitando 
                             e, como a primeira impressão é a que fica, quando alguém é mal atendido por uma pessoa a imagem da empresa 
                             como um todo fica desgastada, por isso é importante ter pessoas especializadas para que a empresa seja bem 
-                            vista desde o seu portão de entrada.</p>
+                            vista desde o seu portão de entrada. </p>
                     </div>
                     <div class="service_bottom">
                         <div class="service_item">
@@ -90,8 +90,8 @@
                     <div class="projects_header">
                         <h1 class="section_title"> Nossa <span class="section_title_span">História</span> </h1>
                             <p> Tudo começou através de uma pesquisa de mercado na qual foi identificada uma oportunidade de negócio a ser empreendido na região. Sabendo
-                                que o mercado atualmente não absorve novas empresas que produzem/prestam serviços do mesmo modo que as empresas já existentes, foi necessario 
-                                criar vantagens competitivas para alavancar essa empresa emergente. </p>
+                            que o mercado atualmente não absorve novas empresas que produzem/prestam serviços do mesmo modo que as empresas já existentes, foi necessario 
+                            criar vantagens competitivas para alavancar essa empresa emergente. </p>
                     </div>
                     <div class="all_projects">
                         <div class="project_item upleft_border upright_border">
@@ -189,8 +189,8 @@
                                 <div class="icon"> <img src="./icons/whatsapp.svg" width="100px"/> </div>
                                 <div class="contact_info">
                                     <h1> WhatsApp </h1>
-                                        <h2> Paulo Augusto Gobbi </h2>
-                                            <h3> (54) 9.9957-4777 </h2>
+                                    <h2> Paulo Augusto Gobbi </h2>
+                                    <h3> (54) 9.9957-4777 </h2>
                                 </div>
                             </div>
                         </a>
@@ -199,8 +199,8 @@
                                 <div class="icon"> <img src="./icons/email.svg" width="100px"/> </div>
                                 <div class="contact_info">
                                     <h1> E-Mail </h1>
-                                        <h2> Paulo Augusto Gobbi </h2>
-                                            <h3> paulo@jpgobbi.com.br </h2>
+                                    <h2> Paulo Augusto Gobbi </h2>
+                                    <h3> paulo@jpgobbi.com.br </h2>
                                 </div>
                             </div>
                         </a>
@@ -209,8 +209,8 @@
                                 <div class="icon"> <img src="./icons/mapmarker.svg" width="100px"/> </div>
                                 <div class="contact_info">
                                     <h1> Endereço </h1>
-                                        <h2> São Marcos - RS </h2>
-                                            <h3> Rua Maringá, 180 </h2>
+                                    <h2> São Marcos - RS </h2>
+                                    <h3> Rua Maringá, 180 </h2>
                                 </div>
                             </div>
                         </a>
