ScrollSpy com Vanilla JS.
Implementado o Scroll Spy com JavaScript puro nos três modos de acesso: Mobile, Tablet e Desktop.

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
                         <div class="nav_list">
                             <div class="hamburger"> <div class="bar"> </div> </div>
                                 <ul>
-                                    <li> <a href="#hero" data-after="Home" class="active"> Home </a> </li>
-                                    <li> <a href="#services" data-after="Serviços"> Serviços </a> </li>
-                                    <li> <a href="#projects" data-after="Sobre"> Sobre </a> </li>
-                                    <li> <a href="#about" data-after="Direção"> Direção </a> </li>
-                                    <li> <a href="#contact" data-after="Contato"> Contato </a> </li>
+                                    <li class="nav_link"> <a href="#hero" data-after="Home" class="active"> Home </a> </li>
+                                    <li class="nav_link"> <a href="#services" data-after="Serviços"> Serviços </a> </li>
+                                    <li class="nav_link"> <a href="#projects" data-after="Sobre"> Sobre </a> </li>
+                                    <li class="nav_link"> <a href="#about" data-after="Direção"> Direção </a> </li>
+                                    <li class="nav_link"> <a href="#contact" data-after="Contato"> Contato </a> </li>
                                 </ul>
                         </div>
                     </div>
@@ -28,7 +28,7 @@
             </section>
             <!-- End Main Header Menu -->
             <!-- Hero Section -->
-            <section id="hero">
+            <section id="hero" class="content_section">
                 <div class="hero container">
                     <div>
                         <h1> Bem-vindo <span> </span> </h1>
@@ -40,7 +40,7 @@
             </section>
             <!-- End Hero Section -->
             <!-- Service Section -->
-            <section id="services">
+            <section id="services" class="content_section">
                 <div class="services container">
                     <div class="service_top">
                         <h1 class="section_title"> Nossos <span class="section_title_span">Serviços</span> </h1>
@@ -85,7 +85,7 @@
             </section>
             <!-- End Service Section -->
             <!-- Projects Section -->
-            <section id="projects">
+            <section id="projects" class="content_section">
                 <div class="projects container">
                     <div class="projects_header">
                         <h1 class="section_title"> Nossa <span class="section_title_span">História</span> </h1>
@@ -134,7 +134,7 @@
 
             <!-- About Section -->
 
-            <section id="about">
+            <section id="about" class="content_section">
 
                 <div class="about container">
 
@@ -175,7 +175,7 @@
             <!-- End About Section -->
 
             <!-- Contact Section -->
-            <section id="contact">
+            <section id="contact" class="content_section">
                 <div class="contact container">
                     <div>
                         <h1 class="section_title"> Fale <span class="section_title_span">Conosco</span> </h1>
