Redesign da Section - Home.
Redesign inicial completo da Section - Home utilizando o SVG - Page Turner que deveria ser utilizado desde o início;
Ajustes realizados apenas para a Media Query de acesso Desktop.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                                     <li class="nav_link"> <a href="#hero" data-after="Home" class="active"> Home </a> </li>
                                     <li class="nav_link"> <a href="#services" data-after="Serviços"> Serviços </a> </li>
                                     <li class="nav_link"> <a href="#projects" data-after="Sobre"> Sobre </a> </li>
-                                    <li class="nav_link"> <a href="#about" data-after="Direção"> Direção </a> </li>
+                                    <li class="nav_link"> <a href="#about" data-after="Agenda"> Agenda </a> </li>
                                     <li class="nav_link"> <a href="#contact" data-after="Contato"> Contato </a> </li>
                                 </ul>
                         </div>
@@ -30,6 +30,7 @@
             <!-- Hero Section -->
             <section id="hero" class="content_section">
                 <div class="hero container">
+                    <div class="page_fold"></div>
                     <div>
                         <h1> Bem-vindo <span> </span> </h1>
                         <h1> ao site da <span> </span> </h1>
